--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.2.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
+    "react-range-slider-input": "^3.0.7",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
